<resources>
    <string name="about_dialog">About</string>
    <string name="ai_black">AI plays Black</string>
    <string name="ai_white">AI plays White</string>
    <string name="app_name">Embryo Engine</string>
    <string name="author">Author</string>
    <string name="board_view">Board</string>
    <string name="benchmark">Benchmark</string>
    <string name="blocking_moves">Use blocking cells</string>
    <string name="blocking_moves_on">Blocking cells allowed</string>
    <string name="blocking_moves_off">Blocking cells not allowed</string>
    <string name="build_date">Build date</string>
    <string name="button_new">New</string>
    <string name="button_play">Play</string>
    <string name="button_redo">Redo</string>
    <string name="button_stop">Stop</string>
    <string name="button_undo">Undo</string>
    <string name="coordinates">Coordinates</string>
    <string name="coordinates_off">Hidden coordinates</string>
    <string name="coordinates_on">Visible coordinates</string>
    <string name="default_board">15</string>
    <string name="default_cache">64</string>
    <string name="default_false">false</string>
    <string name="default_time">1000</string>
    <string name="default_threads">1</string>
    <string name="default_true">true</string>
    <string name="depth">Depth</string>
    <string name="email">Email</string>
    <string name="email_address">mira.fontan@gmail.com</string>
    <string name="engine_version">Engine Version</string>
    <string name="eval">Evaluation</string>
    <string name="forbidden_moves">Forbidden moves</string>
    <string name="forbidden_moves_off">Forbidden moves are not displayed</string>
    <string name="forbidden_moves_on">Show forbidden moves</string>
    <string name="game_type">Game type</string>
    <string name="level">Playing Level</string>
    <string name="losing_moves">Show losing moves</string>
    <string name="losing_moves_off">Losing moves are not displayed</string>
    <string name="losing_moves_on">Show losing moves</string>
    <string name="make_upgrade">Upgrade to Profi</string>
    <string name="menu_settings">Settings</string>
    <string name="miroslav_fontan">Miroslav Fontan</string>
    <string name="multithreading_profi">Use more threads</string>
    <string name="multithreading_no">Single core Free version</string>
    <string name="nodes">Nodes</string>
    <string name="none">---</string>
    <string name="numbered_moves">Numbered moves</string>
    <string name="numbered_moves_off">Unordered moves</string>
    <string name="numbered_moves_on">Show moves order</string>
    <string name="quit">Quit</string>
    <string name="result_black">Black win</string>
    <string name="result_draw">Draw</string>
    <string name="result_white">White win</string>
    <string name="speed">kN/s</string>
    <string name="status">Status</string>
    <string name="sw_name">SW name</string>
    <string name="time">Time</string>
    <string name="version">GUI Version</string>
    <string name="use_database">Use database</string>
    <string name="use_database_off">Database not in use</string>
    <string name="use_database_on">Database ready</string>
    <string name="www">WWW</string>
    <string name="www_address">https://www.facebook.com/embryo.engine</string>
    <string name="zoom">Zoom in by click</string>
    <string name="zoom_off">First tap selects move</string>
    <string name="zoom_on">Tap to magnify the board</string>
    <string name="title_activity_settings">GUI Settings</string>

    <!-- Preference Titles -->
    <string name="board_header">Board settings</string>
    <string name="ai_settings_header">AI settings</string>
    <string name="load_dialog">Load game</string>
    <string name="save_dialog">Save game</string>

</resources>